css style completed

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SidebarToolbar</title>
+	<link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
 	<div class="toolbar">
 		<a href="javascript:;" class="toolbar-item toolbar-item-weixin">
-			<span class="toolbar-layaar">
+			<span class="toolbar-layer">
 				
 			</span>
 		</a>
 		<a href="javascript:;" class="toolbar-item toolbar-item-feedback"></a>
 		<a href="javascript:;" class="toolbar-item toolbar-item-app">
-			<span class="toolbar-layaar">
+			<span class="toolbar-layer">
 				
 			</span>
 		</a>
