--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 		</a>
 		<a href="javascript:;" class="toolbar-item toolbar-item-top"></a>
 	</div> -->
-	<div class="toolbar">
+
+	<!-- 第二种方式：字体图标 -->
+	<!-- <div class="toolbar">
 		<a href="javascript:;" class="toolbar-item">
 			<span class="toolbar-btn">
 				<i class="toolbar-icon icon-wechat"></i>
@@ -51,6 +53,22 @@
 				<i class="toolbar-icon icon-align-top"></i>
 				<span class="toolbar-text">返回<br />顶部</span>
 			</span>
+		</a>
+	</div> -->
+
+	<!-- 第三种方式：利用before和after伪类方式 -->
+	<div class="toolbar">
+		<a href="javascript:;" class="toolbar-item toolbar-item-weixin">
+			<span class="toolbar-btn">公众<br />账号</span>
+		</a>
+		<a href="javascript:;" class="toolbar-item toolbar-item-feedback">
+			<span class="toolbar-btn">意见<br />反馈</span>
+		</a>
+		<a href="javascript:;" class="toolbar-item toolbar-item-app">
+			<span class="toolbar-btn">APP<br />下载</span>
+		</a>
+		<a href="javascript:;" class="toolbar-item toolbar-item-top">
+			<span class="toolbar-btn">返回<br />顶部</span>
 		</a>
 	</div>
 
