--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
+	 <!-- 第二种方式：字体图标  -->
 	<div class="toolbar">
 		<a href="javascript:;" class="toolbar-item">
 			<span class="toolbar-btn">
